--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Webiste</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -11,7 +11,7 @@
     <div id="header">
       <div class="navbar">
         <nav>
-          <img src="" class="logo" />
+          <img src="" class="logo">
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./html/about.html" target="_blank">About</a></li>
